2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version.

2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1833340 ] cannot read program counter/Watchdog has expired
	* src/jtag2run.cc (jtag2::eventLoop): Carefully handle all the
	different events that could be posted by the ICE, as opposed to
	just assuming every event would work like a BREAK where
	AVaRICE is then allowed to go ahead, and fetch the program
	counter value.

2008-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add entries for ATtiny84 and ATtiny85.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1831392 ] --jtag option does not default to usb using dragon
	* src/main.cc: Fix logic for defaulting jtagDeviceName so the
	environment variable JTAG_DEV will be honoured, yet the AVR Dragon
	will still default to USB rather than /dev/avrjtag.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1833342 ] useless warning message about jtag bitrate using dragon
	* src/main.cc: Restrict the warning about defaulting the JTAG bit
	rate to JTAG protocols only.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1869060 ] jtag daisy chain bits limitations
	* src/main.cc: Apply the correct limitations for JTAG
	daisy-chaining.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Issue a warning when trying to chip erase in
	debugWire mode.
	* doc/avarice.1: Document that chip erase is not supported in
	debugWire mode.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::recvFrame): make msglen and its related
	variables unsigned int so they cannot suddenly become negative.

2007-11-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2bp.c (jtag2::addBreakpoint): fix a comparison that
	turned out to be an assignment.

2007-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix a bug with single-stepping on the JTAG ICE mkII or AVR Dragon.
	Single-stepping essentially behaves identical to CMND_GO, i. e. it